<resources>
    <string name="app_name">Course Selection</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="loginHint">Enter user name</string>
    <string name="passwordHint">Enter Password</string>
    <string name="loginBtnTxt">Login</string>
    <string name="errLogin">Invalid user Id. Try again.</string>
    <string name="errPassword">Invalid Password. Try again.</string>
</resources>